--- a/README
+++ b/README
@@ -7,7 +7,7 @@ modular system and to be places in OTB/Module/Remote.
 
 This module is empty it is just a template to be used as a starting point for a
 module with acutal content. It contains the template for sources (src folder),
-test (test folder) and application (app folder)
+test (test folder) and application (app folder).
 
 Getting Started 
 ===============
