--- a/README
+++ b/README
@@ -15,6 +15,20 @@ Getting Started
 The official OTB Wiki documentation on adding an external module is here:
 http://wiki.orfeo-toolbox.org/index.php/How_to_write_a_remote_module
 
+Remote Module
+-------------
+
+After a module has been created as a git repository it can be included
+as a remote module, which enables automatic fetching. Add a file in
+"OTB/Modules/Remote" called "YourModule.remote.cmake", for this module
+it would be "ExternalExample.remote.cmake" with the followlowing contents:
+
+otb_fetch_module(ExternalTemplate
+  "A template for a module."
+  GIT_REPOSITORY https://github.com/orfeotoolbox/otbExternalModuleTemplate
+  GIT_TAG master
+  )
+
 Editing
 ======= 
 
